dim/spec/test_input/invalid_input/invalid_enclosed.dim
document: invalid_enclosed

enclosed:
  - /module/valid_test_1.dim

ESR_Test_1:
